syntax = "proto3";

import "google/protobuf/descriptor.proto";
import "google/protobuf/timestamp.proto";

package types;

enum protocol {
	kInvalid				= 0x0;
	kHello					= 0x1001;
	kPingReq				= 0x1002;
	kPingRes				= 0x1003;
	kContentReadyReq		= 0x1004;
	kContentReadyRes		= 0x1005;
	kHelloClient 			= 0x1006;
	kHelloServer 			= 0x1007;
	kDisconnectAlertNotify  = 0x1008;
	kRegisterServerReq      = 0x1009;
	kRegisterServerRes 		= 0x100A;
	kServerPingReq 			= 0x100B;
	kServerPingRes			= 0x100C;
	kHelloClientAck 		= 0x100D;
	kWorldServerListReq		= 0x100E;
	kWorldServerListRes     = 0x100F;
	kCreateCharacterReq 	= 0x1010;
	kCreateCharacterRes 	= 0x1011;
	kGetCharacterListReq	= 0x1012;
	kGetCharacterListRes	= 0x1013;
	kPlayStartCharacterReq	= 0x1014;
	kPlayStartCharacterRes  = 0x1015;
	kHelloWorldServer 		= 0x1016;
	kHelloWorldClient		= 0x1017;
	kClientMoveReq 			= 0x1018;
	kClientMoveRes			= 0x1019;
	kClientEnterMapNotify 	= 0x1020;
	kClientLeaveMapNotify   = 0x1021;
	kOtherClientEnterNotify	= 0x1022;
	kOtherClientLeaveNotify = 0x1023;
	kClientEnterMapReq		= 0x1024;
	kClientEnterMapRes 		= 0x1025;
	kOtherClientMoveNotify  = 0x1026;
}

extend google.protobuf.MessageOptions {
	optional protocol message_id = 1001;
}

enum Result {
	kSuccess = 0;
	kUnknown = 1;
	kInvalidRequest = 2;
	kInvalidParameter = 3;
	kNotFound = 4;
	kInternalError = 5;
	kDatabaseError = 6;
	kDuplicatedName = 7;
}

enum ServerType {
	kUnknownServer = 0;
	kDedicatedServer = 1;
	kWorldServer = 2;
	kLobbyServer = 3;
}

message ServerInfo {
	int32 server_id = 1;
	string server_address = 2;
	int32 current_player_num = 4;
}

message CharacterInfo {
	int64 character_id = 1;
	string character_name = 2;
	int64 account_id = 3;
	int32 server_id = 4;
	int32 level = 5;
	int64 exp = 6;
	google.protobuf.Timestamp last_played = 7;
	google.protobuf.Timestamp created_at = 8;
}

message Position {
	float x = 1;
	float y = 2;
	float z = 3;
}

message Quat {
	float x = 1;
	float y = 2;
	float z = 3;
	float w = 4;
}

message CharacterPose {
	Position position = 1;
	Quat rotation = 2;
}

message SectionInfo {
	uint64 id = 1;
	int32 map_uid = 2;
}